--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-/out/production/BP-bus+drone/Algorithm/BranchAndPirce/ColumnGen$IloNumVarArray.class
+/BP-bus+drone.iml
+/temp.lp
+/test.lp
+/TestModel.lp
